# ultimate-bug-scanner

./: .gitignore  AGENTS.md  AGENT_FRIENDLINESS_REPORT.md  CHANGELOG.md  INSTALL_ENHANCEMENTS.md  README.md  RESEARCH_FINDINGS.md  SHA256SUMS  SKILL.md  install.sh  taint-analysis-todo.md  ubs
.beads/: .gitignore  beads.left.jsonl  beads.left.meta.json  issues.jsonl  last-touched
.cursor/: rules
.github/workflows/: acfs-checksums-dispatch.yml  checksum-health.yml  checksum-sync.yml  ci.yml  manifest.yml  nix.yml  notify-acfs.yml  oci.yml  release.yml  test-suite.yml
modules/: README.md  ubs-cpp.sh  ubs-csharp.sh  ubs-elixir.sh  ubs-golang.sh  ubs-java.sh  ubs-js.sh  ubs-python.sh  ubs-ruby.sh  ubs-rust.sh  ubs-swift.sh
modules/helpers/: async_task_handles_csharp.py  resource_lifecycle_csharp.py  resource_lifecycle_go.go  resource_lifecycle_java.py  resource_lifecycle_py.py  resource_lifecycle_ruby.py  resource_lifecycle_swift.py  type_narrowing_csharp.py  type_narrowing_kotlin.py  type_narrowing_rust.py  type_narrowing_swift.py  type_narrowing_ts.js
notes/: codex_todo.md  installer_audit_todo.md
scripts/: update_checksums.py  update_sha256sums.sh  verify.sh  verify_sha256sums.sh
test-suite/: README.md  TODO.md  banner_tester.sh  manifest.json  run_all.sh  run_manifest.py
test-suite/buggy/: 12-regex-vulnerabilities.js  13-prototype-pollution.js  14-injection-attacks.js  15-race-conditions.js  16-crypto-mistakes.js  17-dom-manipulation.js  18-api-misuse.js  (+2 more)
test-suite/cpp/clean/: CMakeLists.txt  async_errors.cpp  clean_raii.cpp  concurrency_safe.cpp
(+324 files in other folders)
