cmake_minimum_required(VERSION 3.16)
project(ubs_cpp_clean LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
add_library(clean_samples OBJECT clean_raii.cpp concurrency_safe.cpp math_precision.cpp security_overflow.cpp)
target_compile_options(clean_samples PRIVATE -Wall -Wextra -Wpedantic)
